# mcmanager

./: README.md
.github/workflows/: ci.yml  lint_rust.yml
McManager/: build.gradle.kts  settings.gradle.kts
McManager/base/data/: build.gradle.kts
McManager/base/data/src/main/kotlin/com/oldwomanjosiah/mcmanager/base/data/: GrpcStreamingCall.kt
McManager/base/models/: build.gradle.kts
McManager/base/models/src/main/kotlin/com/oldwomanjosiah/mcmanager/base/models/: Presenter.kt  ViewEffect.kt
McManager/base/models/src/main/kotlin/com/oldwomanjosiah/mcmanager/base/models/molecule/: Molecule.kt
McManager/buildSrc/: build.gradle.kts
McManager/buildSrc/src/main/kotlin/: Lib.kt  Plugin.kt  kotlinJvm.gradle.kts
McManager/compose/: build.gradle.kts
McManager/compose/src/main/kotlin/: Main.kt
McManager/data/: build.gradle.kts
McManager/data/src/main/kotlin/com/oldwomanjosiah/mcmanager/data/: Client.kt
proto/: helloworld.proto
proto/auth/: auth.proto
proto/event/: event.proto
proto/helloworld/: helloworld.proto
server/: Cargo.toml  build.rs  notes.md
server/.cargo/: config
server/async-inotify/: Cargo.toml
server/async-inotify/src/: flags.rs  futures.rs  handle.rs  inotify.rs  lib.rs  task.rs  tracing.rs
server/auth/: Cargo.toml
server/auth/src/: auth_data.rs  lib.rs  manager.rs  service.rs
server/data/: Cargo.toml  build.rs
server/data/src/: lib.rs
server/src/: application.rs  information.rs  main.rs  prelude.rs  util.rs
