[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "fmt", "json", "env-filter" ] }
console-subscriber = { version = "0.1", features = [ "parking_lot" ] }

