[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1.15", features = [ "full", "tracing" ] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "fmt", "json" ] }
console-subscriber = { version = "0.1", features = [ "parking_lot" ] }

# Application
clap = { version = "3.0.0-rc.8", features = [ "derive" ] }
