[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "data", "async-inotify" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Runtime
tokio = { version = "1.15", features = [ "full", "tracing" ] }
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = [ "sync" ] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "fmt", "json" ] }
console-subscriber = { version = "0.1", features = [ "parking_lot" ] }
tracing-futures = "0.2"
anyhow = "1.0"

# Application
clap = { version = "3.0.0-rc.8", features = [ "derive" ] }

# gRPC
tonic = { version = "0.6", features = [ "compression" ] }
prost = { version = "0.9" }

# information
sysinfo = "0.22"

data = { path = "data" }

[build-dependencies]
tonic-build = { version = "0.6", features = [ "prost", "compression" ] }
