[package]
name = "async-inotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify-sys = "0.1.5"
mio = { version = "0.8", features = [ "os-poll", "os-ext" ] }
libc = "0.2"
nix = "0.23"
thiserror = "1"
tokio-stream = "0.1"

[dependencies.tokio]
version = "1"
default-features = false
features = [ "sync" ]

[dev-dependencies]
tempdir = "0.3"

[dev-dependencies.tokio]
version = "1"
default-features = true
features = [ "full" ]
