[package]
name = "async-inotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23"
thiserror = "1"
tokio-stream = "0.1"
futures = "0.3"


[dependencies.tokio]
version = "1"
default-features = false
features = [ "sync", "rt", "net", "macros" ]

[dev-dependencies]
tempdir = "0.3"
anyhow = "1.0"

[dev-dependencies.tokio]
version = "1"
default-features = true
features = [ "full", "test-util" ]
