[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data = { path = "../data" }

futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = [ "sync" ] }
tracing = "0.1"

tonic = { version = "0.6", features = [ "compression" ] }

# Data Storage
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_yaml = "0.8"
base64 = "0.13"

thiserror = "1.0"


[dependencies.tokio]
version = "1.15"
default_features = false
features = [ "sync" ]
